# eos-evm-node

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cicd/: defaults.json  platforms.json
.github/workflows/: build-node.sh  node.yml
cmake/: conan.cmake
cmake/profiles/: linux_arm_gcc_11_debug  linux_arm_gcc_11_release
peripherals/: CMakeLists.txt
peripherals/eos-evm-ws-proxy/: .env-sample  .gitignore  CMakeLists.txt  README.md  block-monitor.js  config.js  logger.js  main.js  package-lock.json  package.json  subscription-server.js  utils.js  websocket-handler.js
peripherals/proxy/: Dockerfile  README.md  eth-jsonrpc-access.lua  nginx.conf
peripherals/tx_wrapper/: CMakeLists.txt  index.js  package-lock.json  package.json
scripts/: .env-sample  start-evm-node.sh  start-evm-runtime.sh
src/: CMakeLists.txt  abi_utils.hpp  block_conversion_plugin.cpp  block_conversion_plugin.hpp  blockchain_plugin.cpp  blockchain_plugin.hpp  channels.hpp  engine_plugin.cpp  engine_plugin.hpp  eos-evm-node.cpp  eos-evm-rpc.cpp  rpc_plugin.cpp  ship_receiver_plugin.cpp  ship_receiver_plugin.hpp  sys_plugin.hpp  utils.hpp
tests/: .env-sample  CMakeLists.txt  defertest.abi  defertest.cpp  defertest.wasm  defertest2.abi  defertest2.cpp  defertest2.wasm  evmbridge.abi  evmbridge.cpp  evmbridge.wasm  flask_proxy.py  nodeos_eos_evm_brownietest.py  nodeos_eos_evm_different_token_test.py  nodeos_eos_evm_gasparam_fork_test.py  nodeos_eos_evm_server.py  nodeos_eos_evm_test.py  nodeos_eos_evm_ws_test_basic.py  nodeos_eos_evm_ws_test_fork.py  start-evm-node.sh  start-evm-runtime.sh
tests/nodeos_eos_evm_server/: CMakeLists.txt  PERFORMANCE.md
tests/nodeos_eos_evm_server/contracts/: CMakeLists.txt
tests/nodeos_eos_evm_server/scripts/: CMakeLists.txt
tests/trx_generator/: CMakeLists.txt  main.cpp  trx_generator.cpp  trx_generator.hpp  trx_provider.hpp
version/: CMakeLists.txt
version/include/eosevm/version/: version.hpp
version/src/: version.cpp  version_impl.cpp.in  version_impl.hpp
