add_subdirectory( nodeos_eos_evm_server )

configure_file(antelope_name.py . COPYONLY)
configure_file(nodeos_eos_evm_ws_test_basic.py . COPYONLY)
configure_file(nodeos_eos_evm_ws_test_fork.py . COPYONLY)
configure_file(nodeos_eos_evm_server.py . COPYONLY)
configure_file(nodeos_eos_evm_test.py . COPYONLY)
configure_file(nodeos_eos_evm_different_token_test.py . COPYONLY)
configure_file(nodeos_eos_evm_gasparam_fork_test.py . COPYONLY)
configure_file(defertest.wasm . COPYONLY)
configure_file(defertest.abi . COPYONLY)
configure_file(defertest2.wasm . COPYONLY)
configure_file(defertest2.abi . COPYONLY)
configure_file(evmbridge.wasm . COPYONLY)
configure_file(evmbridge.abi . COPYONLY)

